<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/body_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_back"
                android:layout_gravity="start"
                android:contentDescription="@string/dummy_description" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/seavphov_logo"
                android:contentDescription="@string/dummy_description" />

            <TextView
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/username"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/addbook_roundedcorner_box"
                android:hint="@string/signup_username"
                android:inputType="text"
                android:textSize="12sp"
                android:padding="8dp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/addbook_roundedcorner_box"
                android:hint="@string/login_email"
                android:inputType="text"
                android:textSize="12sp"
                android:padding="8dp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/password"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/addbook_roundedcorner_box"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:padding="8dp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/signup_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/addbook_roundedcorner_box"
                android:hint="@string/signup_confirmPassword"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:padding="8dp"
                tools:ignore="TextFields" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:background="@drawable/less_rounded_corner"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/already_have_account"
                android:layout_marginTop="8dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/login"
                android:textColor="@color/seavphov_secondary"
                android:textAlignment="center"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>



</LinearLayout>
