<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/dummy_description"
                android:src="@drawable/ic_no_permission" />

            <TextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/no_permissiom"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:text="@string/require_login"
                android:textAlignment="center"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:textStyle="bold" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/less_rounded_corner"
                android:text="@string/login"
                android:textColor="@android:color/white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/don_t_have_account_yet"
                android:layout_marginTop="8dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/sign_up"
                android:textColor="@color/seavphov_secondary"
                android:textAlignment="center"/>

        </LinearLayout>

</LinearLayout>
