<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:layout_marginBottom="20dp">
    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="185dp"
        android:layout_height="150dp"
        android:background="@color/seavphov_background"
        android:scaleType="fitCenter"
        android:contentDescription="@string/dummy_description"
        android:src="@drawable/seavphov_dummy" />
    <TextView
        android:id="@+id/bookTitle"
        android:text="@string/siem_reap"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/bookPrice"
        android:text="@string/_10"
        android:textSize="18sp"
        android:textColor="@color/seavphov_secondary"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
