<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@id/body_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/seavphov_primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/profilePicture"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/circle_pf"
                        android:clipToOutline="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/seavphov_profile"
                        android:alpha="0.7"
                        android:contentDescription="profileImage" />

                    <ImageView
                        android:id="@+id/cameraIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_camera" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/username"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/addbook_roundedcorner_box"
                    android:hint="@string/editProfileHint_username"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:padding="8dp"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/editProfile_bio"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/addbook_roundedcorner_box"
                    android:hint="@string/editProfileHint_bio"
                    android:inputType="text"
                    android:gravity="top"
                    android:textSize="12sp"
                    android:padding="10dp"
                    tools:ignore="TextFields" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editProfile_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/less_rounded_corner"
                    android:layout_marginTop="12dp"
                    android:padding="10sp"
                    android:text="@string/editProfile_button"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>