<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/seavphov_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/background_image"/>

        <!-- Book Cover Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="10dp">

                <!-- Book Title -->

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_lightning_thief"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <!-- Book Description -->

                <TextView
                    android:id="@+id/book_description"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/book_description"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"/>

                <!-- Read More Button -->

                <Button
                    android:id="@+id/read_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/read_more"
                    android:textColor="@android:color/white"
                    android:background="@drawable/rounded_button"
                    android:textSize="14sp"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/book_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/seavphov_dummy"
            />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


</FrameLayout>